[gd_scene load_steps=6 format=3 uid="uid://gc278p8d5pv0"]

[ext_resource type="Texture2D" uid="uid://brgvs55ewkvap" path="res://Sprites/Ground.png" id="1_iewc0"]
[ext_resource type="Script" path="res://Core/tile.gd" id="1_ychgy"]
[ext_resource type="Texture2D" uid="uid://bjqv3dlx8b2gr" path="res://Sprites/TileHighlight.png" id="2_hxv8m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gu5pj"]
size = Vector2(64, 64)

[sub_resource type="LabelSettings" id="LabelSettings_vk40e"]
font_size = 11
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Area2D"]
script = ExtResource("1_ychgy")

[node name="Ground" type="Sprite2D" parent="."]
texture = ExtResource("1_iewc0")

[node name="TileHighlight" type="Sprite2D" parent="."]
visible = false
scale = Vector2(6.4, 6.4)
texture = ExtResource("2_hxv8m")

[node name="BuildingIcon" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gu5pj")

[node name="Label" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 14.0
offset_right = 32.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.932, 1)
size_flags_horizontal = 8
text = "test"
label_settings = SubResource("LabelSettings_vk40e")
horizontal_alignment = 2

[connection signal="input_event" from="." to="." method="_on_input_event"]
